# haskellbook

./: .gitignore
ch02/: assignment.hs
ch03/: Global.hs  assignment.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs
ch04/: assignment.hs
ch05/: assignment.hs  intermission.hs
ch07/: arith4.hs  assignment.hs  intermission.hs  matchingTuples1.hs  registeredUser1.hs  registeredUser2.hs
ch08/: assignment.hs
ch09/: Cipher.hs  PoemLines.hs  assignment.hs  intermission.hs
ch10/: exercises.hs  intermission.hs
ch11/: BinaryTree.hs  Cipher.hs  Jammine.hs  Phone.hs  Razor.hs  exercises.hs  intermission.hs  intermission2.hs  intermission3.hs  intermission4.hs  intermission5.hs  intermission6.hs
ch12/: Either.hs  Maybe.hs  Natural.hs  Tree.hs  Unfold.hs  exercises.hs
ch13/: Cipher.hs  Palindrome.hs  Person.hs
ch13/hangman/: LICENSE  hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello-haskell/: hello-haskell.cabal
ch13/hello-haskell/call-em-up/: call-em-up.cabal
ch14/: Generators.hs
ch14/Addition/: Addition.cabal
ch14/Morse/: Morse.cabal
ch14/NumberIntoWords/: NumberIntoWords.cabal  README.md
ch14/Operations/: Operations.cabal
ch15/: BoolMonoid.hs  First.hs  MadLib.hs  Optional.hs
ch15/OrphanInstance/: OrphanInstance.cabal  README.md
ch15/Semigroups/: README.md  Semigroups.cabal
ch15/SemigroupsAndMonoids/: SemigroupsAndMonoids.cabal
ch15/SemigroupsAndMonoids/src/: SemigroupsAndMonoids.hs
ch15/SemigroupsAndMonoids/test/: SemigroupsAndMonoidsSpec.hs  Spec.hs
ch16/: ReplaceExperiment.hs  intermissions.hs
ch16/Exercises/: Exercises.cabal
ch16/Exercises/src/: Lib.hs
ch16/Exercises/test/: Spec.hs
ch16/Intermission/: Intermission.cabal
ch17/: Apl1.hs  BadMonoid.hs  ChapterExercises.hs  Constant.hs  Experiments.hs  Identity.hs  ListApplicative.hs  Validation.hs  Vowels.hs  intermission.hs
ch18/: BadMonad.hs  Bind.hs  ChapterExercises.hs  Cow.hs  EitherMonad.hs  Fmap.hs  MyEither.hs
ch19/: FunctionMonoid.hs
ch20/: ChapterExercises.hs  Exercises.hs
ch21/: ChapterExercises.hs
ch22/: HurrDurr.hs  ReaderPractice.hs
ch23/: FizzBuzz.hs  Moi.hs  RandomExample.hs  RandomExample2.hs  State.hs
ch24/: AltParsing.hs  Fractions.hs  Ini.hs  LearnParsers.hs  Quasimodo.hs
ch25/: BiFunctor.hs  Identity.hs  IdentityT.hs
ch26/: ChapterExercises.hs  EitherT.hs  MaybeT.hs  MonadTrans.hs  OuterInner.hs  ReaderT.hs  StateT.hs
(+33 files in other folders)
