name:                SemigroupsAndMonoids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SemigroupsAndMonoids#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SemigroupsAndMonoids
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

test-suite SemigroupsAndMonoids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SemigroupsAndMonoidsSpec
  build-depends:       base
                     , QuickCheck
                     , SemigroupsAndMonoids
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SemigroupsAndMonoids
